# system-programming-prototypes

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  open_file.c
.github/workflows/: linux_c_code.yml
.run/: daemon.run.xml  file_management.run.xml  memory_management.run.xml  memory_map.run.xml  multiplexed_io.run.xml  open_file.run.xml  physical_disk_block.run.xml  positional_read_write.run.xml  process_management.run.xml  pthreads.run.xml  read_write.run.xml  scatter_gather_io.run.xml  standard_io.run.xml  truncate.run.xml
daemon/: CMakeLists.txt  Dockerfile  README.md  daemon.c  daemon_shorthand.c  run.sh
file_management/: CMakeLists.txt  Dockerfile  README.md  basic_file_management.c  directories.c  extended_attributes.c  inotify.c  links.c  run.sh  unlink.c  workout_plan.csv
memory_management/: CMakeLists.txt  Dockerfile  README.md  alignment.c  run.sh
memory_map/: CMakeLists.txt  Dockerfile  README.md  memory_map.c  page_size.c  run.sh  week_plan.csv
multiplexed_io/: CMakeLists.txt  Dockerfile  README.md  mileage_goals.csv  multiplexed_io.c  poll.c  print.c  run.sh
open_file/: CMakeLists.txt  Dockerfile  README.md  open_file.c
physical_disk_block/: CMakeLists.txt  Dockerfile  README.md  physical_disk_block.c  spring_races.csv
positional_read_write/: CMakeLists.txt  Dockerfile  README.md  positional_read_write.c  tentative_spring_races.csv
process_management/: CMakeLists.txt  Dockerfile  README.md  mileage_plan.txt  priority.c  process_management.c  processor_affinity.c  resource_limits.c  run.sh  scheduling_policy.c  sessions.c  system.c  waitpid.c  yield.c
pthreads/: CMakeLists.txt  Dockerfile  README.md  mutex_basics.c  run.sh  thread_lifecycle.c  threading_basics.c
read_write/: CMakeLists.txt  Dockerfile  README.md  read_write.c  upcoming_races.csv
scatter_gather_io/: CMakeLists.txt  Dockerfile  README.md  scatter_gather.c
standard_io/: CMakeLists.txt  Dockerfile  README.md  binary_data.c  file_locking.c  prs.csv  reading_characters.c  run.sh  standard_io.c  writing_characters.c
truncate/: CMakeLists.txt  Dockerfile  README.md  mileage_goals.csv  truncate.c
